    - Fix bug to allow VDB LOD SOPs to be chained together.
    - SOP Extrapolate supports dilation in one direction and extending a field
      in one (domain) direction
    - The default OpenVDB ABI is now 8 for Houdini versions > 18.5.
    - VDB Visualize Tree SOP is now multi-threaded and provides slicing and
      color remapping.

    Build:
    - Added support for TBB 2021.
    - Enabled the OPENVDB_FUTURE_DEPRECATION variable by default to warn on
      upcoming deprecations.
    - Introduced a OPENVDB_DOXYGEN_INTERNAL CMake variable which is ON by
      default and removes the majority of internal namespaces from the
      generated doxygen.
    - Improved the doxygen deprecation listings, folder layouts and fixes
      issues when using later versions of doxygen.
    - Build fixes for MinGW on Windows
      [Contributed by Brecht Sanders]
    - Added support for OpenEXR 3
      [Contributed by Cary Phillips]
    - Added an OPENVDB_NAMESPACE_SUFFIX CMake string option which provides
      the ability to customise the VDB namespace.
    - The Python Module now appends the base directory defined by
      Python_SITELIB to the default install path (typically dist-packages
      or site-packages)
      [Contributed by Ignacio Vizzo]


Version 8.1.0 - June 11, 2021

      As of this release, support for grid ABI=5 has been removed.

    New features:
    - Added tools::erodeActiveValues() to match the existing
      tools::dilateActiveValues(). New erosion tools support all tile policies
      and edge/vertex neighbor patterns.
    - Added support for automatic filtering of active tiles in tools::Filter
      by setting tools::Filter::setProcessTiles. Active tiles are densified
      on demand, only when necessary.
    - Added tools::visitNodesDepthFirst and tools::DepthFirstNodeVisitor which
      visit nodes in a tree or sub-tree in single-threaded depth-first order.
    - Significant performance improvements to AX volume kernels, primarily due